# gad-pytest-async-playwright-uv

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  pytest.ini
src/pages/: base_page.py  main_page.py  practice_page.py
src/pages/simple_elements/: simple_elements_actions.py  with_ids_locators.py  without_ids_locators.py
src/tests/: conftest.py  test_one.py  test_with_ids.py  test_without_ids.py
